--- a/client/src/app/checkout/checkout-address/checkout-address.component.html
+++ b/client/src/app/checkout/checkout-address/checkout-address.component.html
@@ -9,12 +9,22 @@
     </div>
     <div class="row" formGroupName="addressForm">
         <div class="form-group col-6">
-            <app-text-input [label]="'First Name'" formControlName="firstName"></app-text-input>
-            <app-text-input [label]="'Last Name'" formControlName="lastName"></app-text-input>
-            <app-text-input [label]="'Street'" formControlName="street"></app-text-input>            
-            <app-text-input [label]="'City'" formControlName="city"></app-text-input>                  
+            <app-text-input [label]="'First Name'" formControlName="firstName"></app-text-input>                                      
+        </div>
+        <div class="form-group col-6">
+            <app-text-input [label]="'Last Name'" formControlName="lastName"></app-text-input>            
+        </div>
+        <div class="form-group col-6">
+            <app-text-input [label]="'Street'" formControlName="street"></app-text-input>              
+        </div>
+        <div class="form-group col-6">
+            <app-text-input [label]="'City'" formControlName="city"></app-text-input>           
+        </div>
+        <div class="form-group col-6">                
             <app-text-input [label]="'State'" formControlName="state"></app-text-input>     
-            <app-text-input [label]="'Zip Code'" formControlName="zipCode"></app-text-input>                                           
+        </div>
+        <div class="form-group col-6">
+            <app-text-input [label]="'Zip Code'" formControlName="zipCode"></app-text-input>   
         </div>
     </div>
 </div>
