--- a/client/src/app/checkout/checkout-success/checkout-success.component.html
+++ b/client/src/app/checkout/checkout-success/checkout-success.component.html
@@ -5,7 +5,7 @@
     </div>
     <h2>Thank you! Your order is confirmed!</h2>
     <p>Your order hasn't shipped yet, but this is to be expected as we are a real store!</p>
-    <button class="btn btn-outline-success">View your order</button>
-
+    <button *ngIf="order" routerLink="/orders/{{order.id}}" class="btn btn-outline-success">View your order</button>
+    <button *ngIf="!order" routerLink="/orders" class="btn btn-outline-success">View all your orders</button>
 
 </div>
