--- a/client/src/app/checkout/checkout-address/checkout-address.component.html
+++ b/client/src/app/checkout/checkout-address/checkout-address.component.html
@@ -34,7 +34,7 @@
         <i class="fa fa-angle-left"></i> Back to basket
     </button>
 
-    <button class="btn btn-primary" cdkStepperNext>
+    <button class="btn btn-primary" [disabled]="checkoutForm.get('addressForm').invalid" cdkStepperNext>
         Go to delivery <i class="fa fa-angle-right"></i>
     </button>
 </div>
