--- a/client/src/app/shared/components/stepper/stepper.component.html
+++ b/client/src/app/shared/components/stepper/stepper.component.html
@@ -2,10 +2,11 @@
      <ul class="nav nav-pills nav-justified">
          <li class="nav-item" *ngFor="let step of steps; let i = index">
             <button 
-                [class.active]="selectedIndex === i"
                 (click)="onClick(i)"
-                class="nav-link py-3 font-weight-bold btn-block">
-                {{step.label}} : {{step.completed}}
+                [disabled]="true"
+                [class.active]="selectedIndex === i"
+                class="nav-link font-weight-bold btn-block" style="padding: 1.20em;">
+                {{step.label}}
             </button>
          </li>
      </ul>
