End of section 22

--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -5,11 +5,10 @@
             <ng-container *ngIf="types && brands">
                 <h5 class="text-warning ml-3 mt-5 mb-3">Sorts</h5>
                 <select name="" id="" class="custom-select mb-3" 
-                    (change)="onSortSelected($event.target.value)"
-                >
+                    (change)="onSortSelected($event.target.value)">
                     <option *ngFor="let sort of sortOpstions"
-                        [value]="sort.value"
-                    >
+                        [selected]="shopParams.sort === sort.value"
+                        [value]="sort.value">
                         {{sort.name}}
                     </option>        
                 </select>
@@ -64,6 +63,7 @@
                 <app-pager
                     [pageSize]="shopParams.pageSize"
                     [totalCount]="totalCount"
+                    [pageNumber]="shopParams.pageNumber"
                     (pageChanged)="onPageChanged($event)"
                 ></app-pager>
             </div>
